Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "FabQ7jQf_8Xt"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
         },
         "outputId": "28bf0030-a887-437e-c881-043bb8719415"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +356,7 @@
         },
         "outputId": "42f147eb-d05b-41f0-d56d-5a1f4dcd7681"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
         },
         "outputId": "ef072506-9d7f-4d58-ca89-be60380deb05"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +410,7 @@
         "id": "ukThS4lZFBe2",
         "outputId": "86170c53-38b2-4570-ba6c-769491ae1c1b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +436,7 @@
         "id": "5JfwlKqwFern",
         "outputId": "68437af3-dba1-4152-aa88-37703060ffcd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
         },
         "outputId": "cc53c8fc-7d87-4cd4-cf47-d5a905d1719e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
         },
         "outputId": "c4fd4a0a-181f-459a-c68e-a16fe1e639f0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
         },
         "outputId": "08b13366-61f3-4b64-cc75-1c20d8ff8ab0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +624,7 @@
         },
         "outputId": "a5837421-5569-4b61-fb3d-537f97da6f80"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
         },
         "outputId": "eefc570c-3e05-430c-b358-35d10bacc84c"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
         },
         "outputId": "8246e404-8213-4427-9d58-7765ec17bbed"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +748,7 @@
         "id": "6yL-vjSyKFKl",
         "outputId": "f7d6e68e-dee9-45c9-e5b3-c0a323b5c477"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +792,7 @@
         },
         "outputId": "74c1f808-24b6-4c69-ccd5-a604f836f614"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +838,7 @@
         },
         "outputId": "8770d0d8-3286-4118-e043-2a8a4ee011d1"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -861,7 +861,7 @@
         },
         "outputId": "7dbf01b7-d9df-4872-dfe2-09ca78bf18a4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +921,7 @@
         },
         "outputId": "ab36d223-bf04-4821-d60a-da47893cbed9"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -944,7 +944,7 @@
         },
         "outputId": "60d421b7-03fb-4030-84aa-498513749b38"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +970,7 @@
         "id": "3IT7SjfsPsIb",
         "outputId": "660303a5-26e9-46d9-ae9d-611170759c4a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -993,7 +993,7 @@
         "id": "lLR_1VtbP3zS",
         "outputId": "e1261c64-d4d9-48c4-f9ed-806724a39049"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1019,7 @@
         },
         "outputId": "7e51550d-0ee3-4801-bcc0-5d5059829ad6"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1042,7 +1042,7 @@
         "id": "sYEh-vF9PDEP",
         "outputId": "be1ef665-fda9-45fc-a054-77fd6ed143a3"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1069,7 @@
         },
         "outputId": "57e9971f-10ea-4963-a889-989eaede42e5"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1109,7 +1109,7 @@
         "id": "nWLSqe3QSl91",
         "outputId": "5bb6f313-6c26-4c7a-f0c4-b5196f6216aa"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1149,7 +1149,7 @@
         },
         "outputId": "e3817478-629f-4ba4-e1f3-36236d3d123d"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,7 +1213,7 @@
       "metadata": {
         "id": "S2S6XAFz-czM"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1259,7 +1259,7 @@
         },
         "outputId": "2663ac20-be79-4db3-b302-a2690d054156"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,7 +1309,7 @@
         },
         "outputId": "5b01dd44-a67c-4714-c7ac-ddc8b66333c0"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1360,7 +1360,7 @@
         },
         "outputId": "9dd5e3a3-3498-4898-a87f-dffe6c9555e8"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,7 +1480,7 @@
         },
         "outputId": "523a1b3b-0d20-4d4d-d235-3ad609dfa69f"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1567,7 @@
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1585,7 +1585,7 @@
         },
         "outputId": "be33ea79-2ce0-48c7-f4db-ad2fa7c345f6"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1611,7 +1611,7 @@
         },
         "outputId": "bcfa0666-6cb4-4aac-ca04-bbc88fdf66d8"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1637,7 +1637,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,7 +1700,7 @@
       "metadata": {
         "id": "efwzcaHsli54"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1712,7 +1712,7 @@
       "metadata": {
         "id": "vqP2fnP5l4CF"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1730,7 +1730,7 @@
         },
         "outputId": "223f8ccf-6bcd-4640-c8b2-d9c60861a944"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,7 +1756,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2036,9 +2036,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbee2eb5-265e-4b5b-badf-a0dd9331074b"
+        "outputId": "661e1972-ee4e-415b-e236-5222ff564fd0"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2048,18 +2048,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(lista)"
+      ],
       "metadata": {
-        "id": "DO2ubP9N9D_2"
+        "id": "DO2ubP9N9D_2",
+        "outputId": "d1c11b45-6217-4396-a150-6ed3136d5a21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
