--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2059,10 +2059,10 @@
       ],
       "metadata": {
         "id": "DO2ubP9N9D_2",
-        "outputId": "d1c11b45-6217-4396-a150-6ed3136d5a21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d1c11b45-6217-4396-a150-6ed3136d5a21"
       },
       "execution_count": 2,
       "outputs": [
@@ -2112,21 +2112,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(lista[0])"
+      ],
       "metadata": {
-        "id": "4hco1Zqy88Kw"
+        "id": "4hco1Zqy88Kw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "92ce77e8-b032-448d-ce35-509dfda0daa4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(lista[-1])"
+      ],
       "metadata": {
-        "id": "M8lH0I2288Ph"
+        "id": "M8lH0I2288Ph",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d51cc14-1f17-4e2f-c41f-8d116cf89d51"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2139,12 +2173,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for elemento in lista:\n",
+        "  print(elemento)"
+      ],
       "metadata": {
-        "id": "rBx4Yu1786Sy"
+        "id": "rBx4Yu1786Sy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2251cd93-8121-4d9c-e72a-378d348cc9be"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Penélope Camacho\n",
+            "9.5\n",
+            "9.0\n",
+            "9.7\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2157,21 +2210,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        " lista[2] = 10.0"
+      ],
       "metadata": {
         "id": "bVPoZg668z3T"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "Jo_PBQ0g8z7D"
+        "id": "Jo_PBQ0g8z7D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a833b71-9ae6-4a93-af0d-2e1dab67fe51"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2184,12 +2256,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = (lista[1]+lista[2]+lista[3])/3\n",
+        "promedio"
+      ],
       "metadata": {
-        "id": "SIH61Rrb8yv4"
+        "id": "SIH61Rrb8yv4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10b1a060-a3de-493e-ec9b-333058ff3ba7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9.733333333333333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
