Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2305,12 +2305,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "len(lista)"
+      ],
       "metadata": {
-        "id": "6q1Tmm7P8wQf"
+        "id": "6q1Tmm7P8wQf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc1caeb9-e3f5-4fb2-f39b-3a04f0918e95"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2325,21 +2342,107 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista[0:2]"
+      ],
       "metadata": {
-        "id": "NctvJTTU8uV9"
+        "id": "NctvJTTU8uV9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7b65370-b62b-4079-c885-cf71e7b78d60"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista[:3]"
+      ],
       "metadata": {
-        "id": "bQZUwldj8uY2"
+        "id": "bQZUwldj8uY2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a585192d-2209-421f-a9b8-104e9c337bd9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista[3:]"
+      ],
+      "metadata": {
+        "id": "Z3d4gaHkj2EI",
+        "outputId": "1b3f1477-c391-4c28-8f56-1c55bb4b6d3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9.7, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista[:]"
+      ],
+      "metadata": {
+        "id": "iv3_ym-kj5dt",
+        "outputId": "e185019c-537f-4b2d-ace7-3dfaf1e05cf2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2354,21 +2457,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.append(promedio)"
+      ],
       "metadata": {
         "id": "_Q0oODwa8spC"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "RM894r2M8sse"
+        "id": "RM894r2M8sse",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8414fee9-9e15-442d-b2e8-557363ea743e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True, 9.733333333333333]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2385,21 +2507,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.extend([10.0,8.0,9.0])"
+      ],
       "metadata": {
         "id": "6Zk2MpMw8rQc"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "NnoKkoWb8rTQ"
+        "id": "NnoKkoWb8rTQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb2ee027-8691-453c-a45d-7eecec69c5ca"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True, 9.733333333333333, 10.0, 8.0, 9.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2412,21 +2553,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.append([10.0,8.0,9.0])"
+      ],
       "metadata": {
         "id": "u3Eub2ZL8pp3"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "tsKK5Ne58pvN"
+        "id": "tsKK5Ne58pvN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "143c5940-3f2b-4e0d-cff7-327473537a02"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho',\n",
+              " 9.5,\n",
+              " 10.0,\n",
+              " 9.7,\n",
+              " True,\n",
+              " 9.733333333333333,\n",
+              " 10.0,\n",
+              " 8.0,\n",
+              " 9.0,\n",
+              " [10.0, 8.0, 9.0]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2441,21 +2610,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista.remove([10.0,8.0,9.0])"
+      ],
       "metadata": {
         "id": "mmboODPc8nd5"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista"
+      ],
       "metadata": {
-        "id": "T_w6vVgV8nh_"
+        "id": "T_w6vVgV8nh_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "316b989e-ce15-4938-b093-2143b7770934"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Penélope Camacho', 9.5, 10.0, 9.7, True, 9.733333333333333, 10.0, 8.0, 9.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2485,21 +2673,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diccionario = {'llave_1':1, 'llave_2':2}\n",
+        "diccionario"
+      ],
       "metadata": {
-        "id": "NDHhzooE8ld5"
+        "id": "NDHhzooE8ld5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8d598709-fdf4-4f05-fec5-2aa3afe7f41e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'llave_1': 1, 'llave_2': 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(diccionario)"
+      ],
       "metadata": {
-        "id": "AVOzqzy-8lhh"
+        "id": "AVOzqzy-8lhh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c486786-310e-44c9-8307-d9c48aa8d7d6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2520,21 +2743,64 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante = {\n",
+        "              'matricula': 2000168933,\n",
+        "              'dia_registro': 25,\n",
+        "              'mes_registro': 10,\n",
+        "              'grupo': '2E'\n",
+        "              }\n",
+        "estudiante"
+      ],
       "metadata": {
-        "id": "0lfOu_c38jED"
+        "id": "0lfOu_c38jED",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "901b567c-ecd2-40be-beed-53cb99427d4e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matricula': 2000168933,\n",
+              " 'dia_registro': 25,\n",
+              " 'mes_registro': 10,\n",
+              " 'grupo': '2E'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante['matricula']"
+      ],
       "metadata": {
-        "id": "XIuqpTTy8jHV"
+        "id": "XIuqpTTy8jHV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25659bdb-5db8-4699-9c80-7e3d7717b077"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000168933"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2547,21 +2813,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante['grupo'] = '2G'"
+      ],
       "metadata": {
         "id": "kQGlp36b8fyP"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante"
+      ],
       "metadata": {
-        "id": "DnfH_qHi8f17"
+        "id": "DnfH_qHi8f17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3449266e-778f-4ff0-a502-47aee61ec40d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matricula': 2000168933,\n",
+              " 'dia_registro': 25,\n",
+              " 'mes_registro': 10,\n",
+              " 'grupo': '2G'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2576,21 +2864,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante['modalidad'] = 'EAD'"
+      ],
       "metadata": {
         "id": "EeLYdlIm8d8a"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante"
+      ],
       "metadata": {
-        "id": "olDIavsm8d_o"
+        "id": "olDIavsm8d_o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ccfda0dd-da5c-430a-fd40-189031a2b825"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matricula': 2000168933,\n",
+              " 'dia_registro': 25,\n",
+              " 'mes_registro': 10,\n",
+              " 'grupo': '2G',\n",
+              " 'modalidad': 'EAD'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(estudiante)"
+      ],
+      "metadata": {
+        "id": "Rce8-Sd6tCjw",
+        "outputId": "9ddfa476-fde2-4dcf-eef0-3bd52fb02cb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "markdown",
