Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2398,11 +2398,11 @@
         "lista[3:]"
       ],
       "metadata": {
-        "id": "Z3d4gaHkj2EI",
-        "outputId": "1b3f1477-c391-4c28-8f56-1c55bb4b6d3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z3d4gaHkj2EI",
+        "outputId": "1b3f1477-c391-4c28-8f56-1c55bb4b6d3b"
       },
       "execution_count": 16,
       "outputs": [
@@ -2424,11 +2424,11 @@
         "lista[:]"
       ],
       "metadata": {
-        "id": "iv3_ym-kj5dt",
-        "outputId": "e185019c-537f-4b2d-ace7-3dfaf1e05cf2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iv3_ym-kj5dt",
+        "outputId": "e185019c-537f-4b2d-ace7-3dfaf1e05cf2"
       },
       "execution_count": 17,
       "outputs": [
@@ -2909,11 +2909,11 @@
         "len(estudiante)"
       ],
       "metadata": {
-        "id": "Rce8-Sd6tCjw",
-        "outputId": "9ddfa476-fde2-4dcf-eef0-3bd52fb02cb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Rce8-Sd6tCjw",
+        "outputId": "9ddfa476-fde2-4dcf-eef0-3bd52fb02cb5"
       },
       "execution_count": 37,
       "outputs": [
@@ -2950,21 +2950,62 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.pop('grupo')"
+      ],
       "metadata": {
-        "id": "ZsSCZx6G8b-T"
+        "id": "ZsSCZx6G8b-T",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c6c71d31-94e2-4e06-ee24-a51458d6a800"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2G'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante"
+      ],
       "metadata": {
-        "id": "7lQ8_jpi8cBR"
+        "id": "7lQ8_jpi8cBR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b80749f8-dbde-4fec-f07b-7e1f42adfa99"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'matricula': 2000168933,\n",
+              " 'dia_registro': 25,\n",
+              " 'mes_registro': 10,\n",
+              " 'modalidad': 'EAD'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2978,12 +3019,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.items()"
+      ],
       "metadata": {
-        "id": "ncdycLV08an7"
+        "id": "ncdycLV08an7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fe1fa59-d1d2-45a5-b959-54a5ca869399"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([('matricula', 2000168933), ('dia_registro', 25), ('mes_registro', 10), ('modalidad', 'EAD')])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2997,12 +3055,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.keys()"
+      ],
       "metadata": {
-        "id": "eZo0biaM8ZVs"
+        "id": "eZo0biaM8ZVs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18d88f45-6c4c-4203-eac5-b803ddfc4086"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['matricula', 'dia_registro', 'mes_registro', 'modalidad'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3016,12 +3091,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiante.values()"
+      ],
       "metadata": {
-        "id": "-NxRT9C18Yvo"
+        "id": "-NxRT9C18Yvo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3cffbdc5-2615-4069-dfc2-d5558efeaf8e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([2000168933, 25, 10, 'EAD'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3034,21 +3126,57 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for llave in estudiante.keys():\n",
+        "  print(llave)"
+      ],
       "metadata": {
-        "id": "NYcjU-Ip8Xan"
+        "id": "NYcjU-Ip8Xan",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2061acb1-0a5d-4b22-aa63-968ddde20e49"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matricula\n",
+            "dia_registro\n",
+            "mes_registro\n",
+            "modalidad\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for llave, valor in estudiante.items():\n",
+        "  print(llave,'--->', valor)"
+      ],
       "metadata": {
-        "id": "aAnpP1Wv8XfJ"
+        "id": "aAnpP1Wv8XfJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bae7b601-26db-4def-aec4-6056346f16b4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matricula ---> 2000168933\n",
+            "dia_registro ---> 25\n",
+            "mes_registro ---> 10\n",
+            "modalidad ---> EAD\n"
+          ]
+        }
+      ]
     }
   ]
 }
